--- a/src/index.html
+++ b/src/index.html
@@ -10,19 +10,29 @@
     <!--titulo da aba da pagina-->
   </head>
   <body>
-    <div class="pageContent">
+
+    <section id="presentation">
+      <div class="presentation container">
+          <div>
+              <a href="#pokeapi" type="button" class="cta">Ver Pokémons</a>
+          </div>
+      </div>
+    </section>
+
+    <section id="pokeapi">
+    <div class="pokeapi container">
       <h2 id="name">Nome do Pokemon</h2>
       <img
         id="img_sprite_front_default"
         src="../assets/missingno.png"
         alt="Imagem do Pokemon"
       />
-      <div>
-        <button id="previous" onclick="previousPokemon()">Anterior</button>
-        <button id="next" onclick="nextPokemon()">Proximo</button>
+      <div class="buttons">
+        <button class="button-64" role="button" onclick="previousPokemon()"><span class="text">Anterior</span></button>
+        <button class="button-64" role="button" onclick="nextPokemon()"><span class="text">Próximo</span></button>
       </div>
     </div>
+  </section>
   </body>
-  <script src="script.js" type="text/javascript"></script>
-  <!--carregar arquivo js-->
+  <script src="script.js" type="module"></script>
 </html>
